load(
    "@bazelruby_rules_ruby//ruby:defs.bzl",
    "ruby_library",
    "ruby_binary",
)

package(default_visibility = ["//:__subpackages__"])

ruby_library(
    name = "lib",
    srcs = glob(["lib/**/*.rb"]),
)

ruby_library(
    name = "test",
    srcs = glob(["test/**/*.rb"]),
)

ruby_library(
    name = "rbi",
    srcs = glob(["sorbet/rbi/**/*.rbi"]),
)

ruby_binary(
    name = "spoom",
    main = "exe/spoom",
    srcs = [
        "exe/spoom",
        "Gemfile",
        "Gemfile.lock",
        "spoom.gemspec",
    ],
    includes = ["lib"],
    deps = [
        ":lib",
        # TODO: list precise dependencies
        "@bundle//:gems",
    ],
)

ruby_binary(
    name = "srb",
    srcs = [
        "sorbet/config",
    ],
    main = "@bundle//:bin/srb",
    deps = [
        ":rbi",
        ":test",
        ":lib",
        "@bundle//:sorbet",
    ],
)
