load(
    "@bazelruby_rules_ruby//ruby:defs.bzl",
    "ruby_library",
    "ruby_binary",
    "ruby_test",
)

package(default_visibility = ["//:__subpackages__"])

ruby_library(
    name = "lib",
    srcs = glob(["lib/**/*.rb"]),
)

ruby_library(
    name = "test",
    srcs = glob(["test/**/*.rb"]),
)

ruby_library(
    name = "rbi",
    srcs = glob(["sorbet/rbi/**/*.rbi"]),
)

ruby_binary(
    name = "spoom",
    main = "exe/spoom",
    srcs = [
        "exe/spoom",
        "Gemfile",
        "Gemfile.lock",
        "spoom.gemspec",
    ],
    includes = ["lib"],
    deps = [
        ":lib",
        # TODO: list precise dependencies
        "@bundle//:gems",
    ],
)

ruby_binary(
    name = "srb",
    srcs = [
        "sorbet/config",
    ],
    main = "@bundle//:bin/srb",
    deps = [
        ":rbi",
        ":test",
        ":lib",
        "@bundle//:sorbet",
    ],
)

ruby_binary(
    name = "rubocop",
    srcs = [
        ".rubocop.yml",
    ],
    main = "@bundle//:bin/rubocop",
    deps = [
        ":lib",
        ":test",
        "@bundle//:rubocop",
    ],
)

# ruby_binary(
#     name = "all-tests",
#     srcs = [
#         "Rakefile",
#         "spoom.gemspec",
#     ],
#     main = "@bundle//:bin/rake",
#     deps = [
#         ":lib",
#         ":test",
#         "@bundle//:gems",
#     ],
# )

ruby_test(
    name = "all-tests",
    srcs = [
        "Rakefile",
        "spoom.gemspec",
    ],
    main = "@bundle//:bin/rake",
    # includes = ["lib"],
    deps = [
        ":lib",
        ":test",
        "@bundle//:gems",
    ],
)
